Fix navbar collapse on tablets in portrait

--- a/source/assets/less/application.less
+++ b/source/assets/less/application.less
@@ -1,5 +1,6 @@
 @import "../../../node_modules/bootstrap/less/bootstrap";
 
+@grid-float-breakpoint: 992px;
 @h1-font-size: 23px;
 h1 {
   font-size: @h1-font-size;
